<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.trip.andrew.tripplanner.trip_add">

    <TextView
        android:id="@+id/tv_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_activity_trip_add_name"
        android:textSize="30sp"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_trip_add_name"
        android:layout_alignTop="@+id/tv_trip_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:layout_marginTop="43dp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv_trip_date_title_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_trip_add_name"
        android:text="@string/tv_activity_trip_add_start"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tv_trip_date_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_trip_date_title_start"
        android:text="@string/tv_activity_trip_add_start"
        android:textSize="30sp"
        android:onClick="showDatePickerDialogStart"/>
    <TextView
        android:id="@+id/tv_trip_date_title_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_trip_date_start"
        android:text="@string/tv_activity_trip_add_end"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tv_trip_date_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_trip_date_title_end"
        android:text="@string/tv_activity_trip_add_start"
        android:textSize="30sp"
        android:onClick="showDatePickerDialogEnd"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_activity_trip_add_back"
        android:id="@+id/button"
        android:layout_below="@+id/tv_trip_date_end"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="85dp"
        android:onClick="onBack"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_activity_trip_add_add"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/button"
        android:layout_alignRight="@+id/tv_trip_date_end"
        android:layout_alignEnd="@+id/tv_trip_date_end"
        android:onClick="onAddTrip"/>



</RelativeLayout>
